timeline/style.css
.artifact {
    background: #888;
	border-radius: 5px;
	margin-top: 10px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	transition: all 0.5s;
	user-select: none;
	cursor: pointer;
}

.artifact.active {
	margin-top: 20px;
	margin-bottom: 20px;
	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.artifact .contents {
	background: #fff;
	transition: all 0.5s;
	max-height: 100px;
	overflow: hidden;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
}

.artifact.active .contents {
	overflow-y: scroll;
	overflow-y: auto;
	max-height: calc(100% - 90px);
}

.darkbox {
	width: 100%;
	background: #222;
	display: flex; 
	justify-content: center;
}

.darkbox img {
	max-width: 100%;
	max-height: 100%;
	display: block;
	background: #333;
}

.artifact.active .darkbox img {
	margin: auto;
}

.artifact .caption {
	border-top: 1px solid #eee;
	background: #fff;
	font-family: sans-serif;
	padding: 15px;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}

